# python-monorepo-experiment

./: .dockerignore  .gitignore  Makefile  README.md  justfile  nx.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pr.yml
apps/mycli/: Makefile  justfile  project.json  pyproject.toml
apps/mycli/postmodern/mycli/: cli.py
apps/mycli/tests/: test_mycli.py
apps/server/: Dockerfile  Makefile  justfile  project.json  pyproject.toml
apps/server/postmodern/server/: run.py
apps/server/tests/: test_server.py
apps/server2/: Dockerfile  Makefile  README.md  justfile  project.json  pyproject.toml
apps/server2/postmodern/server2/: run.py
apps/server2/tests/: test_server2.py
e2e/server2-e2e/: Makefile  justfile  project.json  pyproject.toml
e2e/server2-e2e/tests/: test_server2_e2e.py
libs/greeter/: justfile  project.json  pyproject.toml
libs/greeter/postmodern/greeter/: __init__.py
tools/democli/: README.md  project.json  pyproject.toml
tools/democli/postmodern/democli/: cli.py
tools/democli/tests/: test_democli.py
