[project]
name = "postmodern"
version = "0.1.0"
description = "Example monorepo using uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright >= 1.23.1",
    "pytest >= 8.3.4",
    "ruff >= 0.8.5",
]

[tool.uv.workspace]
members = ["libs/*", "apps/*"]
