[project]
name = "postmodern"
version = "0.1.0"
description = "Example monorepo using uv"
readme = "README.md"
requires-python = "== 3.14.*"
dependencies = []

[tool.uv]
required-version = "==0.9.18"
conflicts = [
    [
        { package = "postmodern-server" },
        { package = "postmodern-server2" },
        { package = "postmodern-server2-e2e" },
    ],
]

[tool.uv.workspace]
members = ["libs/*", "apps/*", "e2e/*"]
