[project]
name = "postmodern-mycli"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "== 3.14.*"
dependencies = [
    "urllib3 == 2.3.0",
]

[dependency-groups]
dev = [
    "pytest == 8.3.4",
    "ruff == 0.8.5",
    "ty == 0.0.18",
]

[tool.uv.sources]

[project.scripts]
postmodernfoo = "postmodern.mycli.cli:main"

[tool.ty.environment]
python-version = "3.13"
python = "../../.venv"

[build-system]
requires = ["uv_build == 0.10.4"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "postmodern.mycli"
module-root = ""
