[project]
name = "postmodern-server"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "postmodern-greeter",
]

[dependency-groups]
dev = [
    "pytest == 8.3.4",
    "ruff == 0.8.5",
    "ty == 0.0.18",
]

[tool.uv.sources]
postmodern-greeter = { workspace = true }

[tool.ty.environment]
python-version = "3.13"
python = "../../.venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["postmodern"]
