[project]
name = "postmodern-server2-e2e"
version = "0.1.0"
description = "End-to-end tests for postmodern-server2"
readme = "README.md"
requires-python = "== 3.14.*"
dependencies = [
    "httpx == 0.28.1",
    "postmodern-server2",
    "pytest == 8.3.4",
    "uvicorn == 0.41.0",
]

[dependency-groups]
dev = [
    "ruff == 0.8.5",
    "ty == 0.0.18",
]

[tool.uv.sources]
postmodern-server2 = { workspace = true }

[tool.ty.environment]
python-version = "3.13"
python = "../../.venv"

[tool.uv]
package = false
